--- a/parcer/index.html
+++ b/parcer/index.html
@@ -9,12 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <button class="button_main1 active" id="button_voyage">Voyage Tours</button>
-        <button class="button_main2" id="button_smart">Smart Systems</button>
+        <button class="button_main1" id="button_voyage">Voyage Tours</button>
 
         <div class="content">
             <div class="voyage__content active_content">
-                <input type="textarea" id="voyage_data" placeholder="details...">
+                <input type="text" id="voyage_data" placeholder="details...">
                 <input type="text" id="voyage_ticket" placeholder="ticket">
                 <input type="text" id="voyage_transfer" placeholder="transfer">
                 <input type="text" id="voyage_hotel" placeholder="hotel">
@@ -27,22 +26,6 @@
                 </select>
                 <button class="button" id="voyage_calc">Calculate</button>
             </div>
-
-            <div class="smart__content">
-                <input type="textarea" id="smart_data" placeholder="details...">
-                <input type="text" id="smart_ticket" placeholder="ticket">
-                <input type="text" id="smart_transfer" placeholder="transfer">
-                <input type="text" id="smart_hotel" placeholder="hotel">
-                <select id="smart_commission">
-                    <option value="0.845">0.845</option>
-                    <option value="0.84">0.84</option>
-                    <option value="0.85">0.85</option>
-                    <option value="0.87">0.87</option>
-                    <option value="0.97">0.97</option>
-                </select>
-                <button class="button" id="smart_calc">Calculate</button>
-            </div>
-
         </div>
 
         <div class="output">
@@ -51,6 +34,7 @@
         </div>
     </div>
 
+    <script src="parcer.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
