--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <img src="images/logo.svg" alt="logo" />
       </div>
       <div class="content">
-        <a href="parcer/index.html" class="parcer">Parcer</a>
+        <button><a href="parcer/index.html">Parcer</a></button>
+        <button><a href="combi/index.html">Combi</a></button>  
       </div>
     </div>
   </body>
