--- a/parcer/index.html
+++ b/parcer/index.html
@@ -29,6 +29,10 @@
         </div>
       </div>
 
+      <div class="infosheet">
+        <p>в пустые поля необходимо вписывать 0</p>
+      </div>
+
       <div class="output">
         <h2>Output:</h2>
         <div id="calc_output"></div>
