added more options values

--- a/parcer/index.html
+++ b/parcer/index.html
@@ -22,7 +22,9 @@
             <option value="0.845">0.845</option>
             <option value="0.84">0.84</option>
             <option value="0.85">0.85</option>
+            <option value="0.86">0.86</option>
             <option value="0.87">0.87</option>
+            <option value="0.88">0.88</option>
             <option value="0.97">0.97</option>
           </select>
           <button class="button" id="voyage_calc">Calculate</button>
