--- a/combi/index.html
+++ b/combi/index.html
@@ -35,9 +35,11 @@
             <input type="text" id="ticketPrice" placeholder="ticket">
             <select name="commission" id="commission">
                 <option value="0.85">0.85</option>
+                <option value="0.86">0.86</option>
                 <option value="0.84">0.84</option>
                 <option value="0.845">0.845</option>
                 <option value="0.87">0.87</option>
+                <option value="0.97">0.97</option>
             </select>
             <button class="button" id="calculate">Calculate</button>
         </div>
